tests/baselines/reference/parserEnum7.errors.txt
parserEnum7.ts(2,3): error TS2452: An enum member cannot have a numeric name.
parserEnum7.ts(2,6): error TS2452: An enum member cannot have a numeric name.
parserEnum7.ts(2,9): error TS2452: An enum member cannot have a numeric name.


==== parserEnum7.ts (3 errors) ====
    enum E {
      1, 2, 3
      ~
!!! error TS2452: An enum member cannot have a numeric name.
         ~
!!! error TS2452: An enum member cannot have a numeric name.
            ~
!!! error TS2452: An enum member cannot have a numeric name.
    }